--- a/src/main/resources/jdbcLocal.properties
+++ b/src/main/resources/jdbcLocal.properties
@@ -1,4 +1,4 @@
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost/spring_jdbc
+jdbc.url = jdbc:mysql://localhost/travel
 jdbc.username = root
 jdbc.password = 
