--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>id.ac.uad.tot</groupId>
     <artifactId>Spring-Hibernate</artifactId>
     <version>0.1</version>
     <packaging>jar</packaging>
+
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-        
-        <!-- versi library dan framework -->
-        <org.springframework.version>3.2.2.RELEASE</org.springframework.version>
-        <org.hibernate.version>4.3.5.Final</org.hibernate.version>
-        <org.hibernate.validator.version>4.3.0.Final</org.hibernate.validator.version>
+        <org.springframework.version>4.0.5.RELEASE</org.springframework.version>
+        <org.hibernate.version>4.3.0.Final</org.hibernate.version>
+        <org.hibernate.validator.version>5.0.2.Final</org.hibernate.validator.version>
         <org.slf4j.version>1.6.4</org.slf4j.version>
         <ch.qos.logback.version>1.0.0</ch.qos.logback.version>
-        <joda-time.version>2.0</joda-time.version>
         <mysql.version>5.1.18</mysql.version>
         <postgresql.version>9.1-901.jdbc4</postgresql.version>
         <javassist.version>3.12.1.GA</javassist.version>
         <groovy.version>1.8.4</groovy.version>
         <junit.version>4.10</junit.version>
         <dbunit.version>2.4.8</dbunit.version>
-        <servlet.version>3.0.1</servlet.version>
+        <quartz.version>2.2.0</quartz.version>
+        <servlet.version>2.5</servlet.version>
+        <commons.collection.version>3.2.1</commons.collection.version>
         <commons.lang3.version>3.1</commons.lang3.version>
         <commons-fileupload.version>1.2.2</commons-fileupload.version>
         <commons-io.version>2.1</commons-io.version>
@@ -35,64 +33,114 @@
         <rest-assured.version>1.6.2</rest-assured.version>
         <tiles.version>2.2.2</tiles.version>
         <jstl.version>1.2</jstl.version>
-        <jsp.version>2.3.1</jsp.version>
         <cglib.version>2.2</cglib.version>
-        <org.aspectj.version>1.7.1</org.aspectj.version>
-        <org.apache.httpcomponents.httpclient.version>4.1.3</org.apache.httpcomponents.httpclient.version>
-   
+        <org.mockito.version>1.9.5</org.mockito.version>
+        <commons.net.version>3.3</commons.net.version>
+        <org.aspectj.version>1.7.3</org.aspectj.version>
+        <maven.jetty.plugin.version>9.1.0.v20131115</maven.jetty.plugin.version>
+        <org.apache.httpcomponents.httpclient.version>4.3.1</org.apache.httpcomponents.httpclient.version>
+        <super-csv.version>2.1.0</super-csv.version>
     </properties>
-    
     <dependencies>
+
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>${commons-logging.version}</version>
-            <scope>provided</scope>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${org.slf4j.version}</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${org.hibernate.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+                    <groupId>org.hibernate.javax.persistence</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jboss-logging</artifactId>
+                    <groupId>org.jboss.logging</groupId>
+                </exclusion>
+            </exclusions>
+
+
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${org.hibernate.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+                    <groupId>org.hibernate.javax.persistence</groupId>
+                </exclusion>
+            </exclusions>
+
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-mapper-asl.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>${org.slf4j.version}</version>
-            <scope>runtime</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-mapper-asl.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>log4j-over-slf4j</artifactId>
-            <version>${org.slf4j.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${ch.qos.logback.version}</version>
-            <scope>runtime</scope>
-        </dependency>
+
+        <!--if you want to use DBCP for Connection pool-->
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!--  <dependency>
+              <groupId>postgresql</groupId>
+              <artifactId>postgresql</artifactId>
+              <version>${postgresql.version}</version>
+              <scope>runtime</scope>
+          </dependency>-->
+
         <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>${postgresql.version}</version>
-            <scope>runtime</scope>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${org.springframework.version}</version>
+
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
             <version>${org.springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${org.aspectj.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${org.aspectj.version}</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
@@ -100,12 +148,18 @@
             <version>${cglib.version}</version>
         </dependency>
         <dependency>
-            <artifactId>spring-expression</artifactId>
-            <groupId>org.springframework</groupId>
-            <version>${org.springframework.version}</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${org.hibernate.validator.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jboss-logging</artifactId>
+                    <groupId>org.jboss.logging</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
-            <artifactId>spring-jdbc</artifactId>
+            <artifactId>spring-expression</artifactId>
             <groupId>org.springframework</groupId>
             <version>${org.springframework.version}</version>
         </dependency>
@@ -115,20 +169,28 @@
             <version>${org.springframework.version}</version>
         </dependency>
         <dependency>
+            <artifactId>spring-web</artifactId>
+            <groupId>org.springframework</groupId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons.lang3.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>${org.hibernate.version}</version>
-        </dependency>
-    </dependencies>
 
+
+    </dependencies>
 </project>
