--- a/src/main/resources/jdbcLocal.properties
+++ b/src/main/resources/jdbcLocal.properties
@@ -1,4 +1,5 @@
+hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost/travel
+jdbc.url = jdbc:mysql://localhost:3306/travel_db?zeroDateTimeBehavior=convertToNull
 jdbc.username = root
 jdbc.password = 
