--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <org.springframework.version>4.0.5.RELEASE</org.springframework.version>
         <org.hibernate.version>4.3.0.Final</org.hibernate.version>
         <org.hibernate.validator.version>5.0.2.Final</org.hibernate.validator.version>
+        <org.springframework.data.version>1.6.0.RELEASE</org.springframework.data.version>
         <org.slf4j.version>1.6.4</org.slf4j.version>
         <ch.qos.logback.version>1.0.0</ch.qos.logback.version>
         <mysql.version>5.1.18</mysql.version>
@@ -38,11 +39,17 @@
         <org.mockito.version>1.9.5</org.mockito.version>
         <commons.net.version>3.3</commons.net.version>
         <org.aspectj.version>1.7.3</org.aspectj.version>
+
         <maven.jetty.plugin.version>9.1.0.v20131115</maven.jetty.plugin.version>
         <org.apache.httpcomponents.httpclient.version>4.3.1</org.apache.httpcomponents.httpclient.version>
         <super-csv.version>2.1.0</super-csv.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${org.springframework.data.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
