--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,11 @@
     <groupId>id.ac.uad.tot</groupId>
     <artifactId>Spring-Hibernate</artifactId>
     <version>0.1</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
         <org.springframework.version>4.0.5.RELEASE</org.springframework.version>
         <org.hibernate.version>4.3.0.Final</org.hibernate.version>
         <org.hibernate.validator.version>5.0.2.Final</org.hibernate.validator.version>
@@ -39,7 +41,6 @@
         <org.mockito.version>1.9.5</org.mockito.version>
         <commons.net.version>3.3</commons.net.version>
         <org.aspectj.version>1.7.3</org.aspectj.version>
-
         <maven.jetty.plugin.version>9.1.0.v20131115</maven.jetty.plugin.version>
         <org.apache.httpcomponents.httpclient.version>4.3.1</org.apache.httpcomponents.httpclient.version>
         <super-csv.version>2.1.0</super-csv.version>
@@ -205,7 +206,16 @@
             <groupId>org.springframework</groupId>
             <version>${org.springframework.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -229,4 +239,24 @@
         </dependency>
 
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.1.v20140609</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
+                    <httpConnector>
+                        <port>8080</port>
+                    </httpConnector>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
